aws-vpc-foundation.yml
AWSTemplateFormatVersion: '2010-09-09'

Description: >
  Networking stack for Minecraft server runtime

Parameters:
  ApplicationName:
    Type: String
    Default: minecraft
    AllowedValues: [minecraft]
    Description: Application name will be used to prefix resource names (always 'minecraft').
  Environment:
    Type: String
    Description: Environment name will be appended to resource names.
  VpcCidrBlock:
    Type: String
    Default: 10.0.0.0/16
    Description: CIDR block for application VPC.
  Subnet1CidrBlock:
    Type: String
    Default: 10.0.0.0/24
    Description: CIDR block for public subnet.

Resources:
  # ---------------------------------------------
  #
  # VPC and Subnet definitions
  #

  MinecraftVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      Tags:
        - Key: Application
          Value: !Ref ApplicationName
        - Key: Environment
          Value: !Ref Environment
        - Key: Name
          Value: !Sub ${ApplicationName}-vpc-${Environment}

  MinecraftSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MinecraftVPC
      CidrBlock: !Ref Subnet1CidrBlock
      Tags:
        - Key: Application
          Value: !Ref ApplicationName
        - Key: Environment
          Value: !Ref Environment
        - Key: Name
          Value: !Sub ${ApplicationName}-subnet1-${Environment}

  # ---------------------------------------------
  #
  # Route Table definitions
  #

  MinecraftInternetGateway:
    Type: AWS::EC2::InternetGateway
    DependsOn: MinecraftVPC
    Properties:
      Tags:
        - Key: Application
          Value: !Ref ApplicationName
        - Key: Environment
          Value: !Ref Environment
        - Key: Name
          Value: !Sub ${ApplicationName}-igw-${Environment}

  MinecraftInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MinecraftVPC
      InternetGatewayId: !Ref MinecraftInternetGateway

  MinecraftRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MinecraftVPC
      Tags:
        - Key: Application
          Value: !Ref ApplicationName
        - Key: Environment
          Value: !Ref Environment
        - Key: Name
          Value: !Sub ${ApplicationName}-routetable-${Environment}

  MinecraftSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MinecraftSubnet1
      RouteTableId: !Ref MinecraftRouteTable

  MinecraftInternetRoute:
    Type: AWS::EC2::Route
    DependsOn: MinecraftInternetGatewayAttachment
    Properties:
      RouteTableId: !Ref MinecraftRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MinecraftInternetGateway

  # ---------------------------------------------
  #
  # Network ACL definitions
  #

  MinecraftNetworkACL:
    Type: AWS::EC2::NetworkAcl
    DependsOn: MinecraftSubnet1
    Properties:
      VpcId: !Ref MinecraftVPC
      Tags:
        - Key: Application
          Value: !Ref ApplicationName
        - Key: Environment
          Value: !Ref Environment
        - Key: Name
          Value: !Sub ${ApplicationName}-acl-${Environment}

  MinecraftSubnetNetworkACLAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref MinecraftSubnet1
      NetworkAclId: !Ref MinecraftNetworkACL

  MinecraftInboundSshRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref MinecraftNetworkACL
      Egress: false
      RuleNumber: 100
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      Protocol: 6 # TCP
      PortRange:
        From: 22
        To: 22

  MinecraftInboundEphemeralRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref MinecraftNetworkACL
      Egress: false
      RuleNumber: 110
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      Protocol: 6 # TCP
      PortRange:
        From: 32768
        To: 65535

  MinecraftInboundGameTcpRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref MinecraftNetworkACL
      Egress: false
      RuleNumber: 120
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      Protocol: 6 # TCP
      PortRange:
        From: 25565
        To: 25565

  MinecraftInboundGameUdpRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref MinecraftNetworkACL
      Egress: false
      RuleNumber: 121
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      Protocol: 17 # UDP
      PortRange:
        From: 25565
        To: 25565

  MinecraftInboundRconRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref MinecraftNetworkACL
      Egress: false
      RuleNumber: 122
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      Protocol: 6 # TCP
      PortRange:
        From: 25575
        To: 25575

  MinecraftOutboundAllowAllRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref MinecraftNetworkACL
      Egress: true
      RuleNumber: 100
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      Protocol: -1 # all traffic

  # ---------------------------------------------
  #
  # Security Group definitions
  #

  MinecraftSshSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref MinecraftVPC
      GroupName: minecraft-sg
      GroupDescription: Minecraft server firewall rules
      SecurityGroupIngress:
        - IpProtocol: 6 # TCP
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
          Description: SSH access to the virtual machines
        - IpProtocol: 6 # TCP
          FromPort: 25565
          ToPort: 25565
          CidrIp: 0.0.0.0/0
          Description: Minecraft server TCP port
        - IpProtocol: 17 # UDP
          FromPort: 25565
          ToPort: 25565
          CidrIp: 0.0.0.0/0
          Description: Minecraft server UDP port
        - IpProtocol: 6 # TCP
          FromPort: 25575
          ToPort: 25575
          CidrIp: 0.0.0.0/0
          Description: Minecraft rcon TCP port
      Tags:
        - Key: Application
          Value: !Ref ApplicationName
        - Key: Environment
          Value: !Ref Environment
        - Key: Name
          Value: !Sub ${ApplicationName}-sg-${Environment}
